--- a/bundles/lincko/app/public/styles/app/content.css
+++ b/bundles/lincko/app/public/styles/app/content.css
@@ -83,6 +83,7 @@
 	z-index: 1;
 	overflow: hidden;
 	margin-left: 48px;
+	position: relative;
 }
 
 #app_content_dynamic > div {
